--- a/test.html
+++ b/test.html
@@ -14,6 +14,7 @@ support@yourcompany.com</a>.
 <P> This is a new paragraph!
 <P> <B>This is a new paragraph!</B>
 <BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
+<test>
 <HR>
 </BODY>
 </HTML>
