--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@ support@yourcompany.com</a>.
 <BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
 <BR> What is this?</BR>
 <BR> What are you trying to do</BR>
+<BR>New Text</BR>
 <HR>
 </BODY>
 </HTML>
